<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|right"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/zoomInButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/zoomInBtn"/>

        <Button
            android:id="@+id/zoomOutButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/zoomOutBtn"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        android:layout_margin="20dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="40dp"/>
</FrameLayout>