<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content/">

        <TextView
            android:text="設定"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radioModeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

            <!-- 音声 -->
            <RadioButton
                android:id="@+id/radioSound"
                android:text="@string/settings_soundTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- バイブレーション -->
            <RadioButton
                android:id="@+id/radioVibration"
                android:text="@string/settings_vibrationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- 音声+バイブレーション-->
            <RadioButton
                android:id="@+id/radioBoth"
                android:text="@string/settings_bothTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <!-- テスト -->
        <Button
            android:id="@+id/btnTest"
            android:text="テスト実行"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- 距離設定 -->
        <TextView
            android:text="通知距離"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioNear"
                android:text="近い"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioFar"
                android:text="遠い"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnReport"
            android:text="レポート表示"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
